# thai-isbn-db

./: .env.example  .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
app/: cli.py  config.py  database.py  models.py  orchestrator.py
app/clients/: naiin_client.py  nlt_client.py  seed_scraper.py
app/utils/: http_client.py  isbn_formatter.py
tests/: conftest.py  test_cli_json_output.py  test_isbn_formatter.py  test_naiin_client.py  test_nlt_client.py  test_orchestrator.py  test_seed_scraper.py
